2010-08-11  MIYAMUKO Katsuyuki

	* api/repo.l, api.user.l: JSON オブジェクトではなく構造体を返すようにした

	* api/types.l: github-public-key などは repo.l と user.l から使うため、
	構造体の定義は types.l にまとめるようにした。

	* api/issues.l: JSON オブジェクトではなく構造体を返すようにした

2010-08-07  MIYAMUKO Katsuyuki

	* api/commits.l: ↓と同じ

	* api/object.l: ↓と同じ

	* api/user.l: JSON オブジェクトではなく構造体を返すようにした

	* (github-user-search-by-email, github-users-search): email 指定の
	検索は単一のユーザを返し、query 指定の検索は複数のユーザを返すので
	関数を分けた

2010-07-29  MIYAMUKO Katsuyuki

	* (gist-id-list-all, gist-id-list): 自分の Gist の ID の一覧を取得
	する関数を追加。
	Gist の API では Public な Gist しか取得できないので、Web ページを
	スクレイピングして Public と Private な Gist の ID を取得する。

	* (github-get, github.post): WinHTTP を利用するようにした。
	Gist のブラウザ向けインターフェイスは query の login/token の指定より
	Cookie にあるセッション ID のほうを優先するので Msxml2.XMLHTTP は利用できない。

	* package.l: xml-http-request 1.3.0 以上が必要なので
	バージョンチェックを追加

2010-07-28  MIYAMUKO Katsuyuki

	* api/gist-unofficial.l: Gist API が足りないのでブラウザ向けのインターフェイス
	を利用して API を実装
	- 実装した API
	  - gist-new
	  - gist-edit
	  - gist-delete
	  - gist-comment-add
	  - gist-update-description
	  - gist-star
	  - gist-unstar
	- 複数ファイルにはまだ対応していない

2010-07-27  MIYAMUKO Katsuyuki

	* api/network.l: 一応一通り動くようになった

	* api/gist.l: Gist API を定義。gist- だけで十分ユニークな名前なので
	関数名に github- をつけなかった。

2010-07-26  MIYAMUKO Katsuyuki

	* api/user.l, api/object.l, api/commit.l, api/issues.l: 一通り動くようになった。戻り値は要修正。

2010-07-24  MIYAMUKO Katsuyuki

	* とりあえず push

	* api/repo.l: 一応一通り動くようになった
	  - 戻り値はいまのところ JSON をそのまま返しているので修正が必要

2010-07-23  MIYAMUKO Katsuyuki

	* スクリプトの雛形修正

	* (form-value-bind): post データを生成するマクロ

	* api/repo.l: Repository API の半分まで実装してテスト
	  - github-repos-search
	  - github-repos-show
	  - github-repos-set
	  - github-repos-list
	    - ログイン中はプライベートなリポジトリも取得できるけど
	      プライベートなリポジトリを作るには有料プランにする必要がある
	  - github-repos-unwatch
	  - github-repos-watch
	  - github-repos-fork

2010-07-22  MIYAMUKO Katsuyuki

	* (define-github-api): マクロで生成した関数にはタグジャンプできないので却下

	* Develop.Github の markdown ファイル